--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,364 +1,396 @@
 // GLOBAL
 body {
-    padding: 13px !important;
-    background-color: #f5f6f8 !important;
-    height: 100vh;
+  padding: 13px !important;
+  background-color: #f5f6f8 !important;
+  height: 100vh;
 }
 
 .container {
-    width: 100%;
-    max-width: 1300px;
+  width: 100%;
+  max-width: 1300px;
 
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 body .btn {
-    background-color: #5a8cf6;
-    border-radius: 5px;
-    border: 1px solid #1158ea;
-    color: #fff;
-    font-weight: 300;
-    height: 40px;
+  background-color: #5a8cf6;
+  border-radius: 5px;
+  border: 1px solid #1158ea;
+  color: #fff;
+  font-weight: 300;
+  height: 40px;
 
-    &:hover {
-        color: #fff;
-        background-color: rgba(90, 140, 246, 0.82);
-    }
+  &:hover {
+    color: #fff;
+    background-color: rgba(90, 140, 246, 0.82);
+  }
 }
 
 // HEADER
 .header-main {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .header-inner,
 .header-account-info,
 .header-settings {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .header-inner {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .header-account-info {
-    gap: 25px;
+  gap: 25px;
 }
 
 .date {
-    span {
-        margin-right: 25px;
-        font-size: 13px;
+  span {
+    margin-right: 25px;
+    font-size: 13px;
 
-        &:last-child {
-            margin-right: 0;
-        }
+    &:last-child {
+      margin-right: 0;
     }
+  }
 }
 
 .header-settings {
-    gap: 25px;
+  gap: 25px;
 
-    svg {
-        cursor: pointer;
-        color: #6a6f8d;
+  svg {
+    cursor: pointer;
+    color: #6a6f8d;
 
-        &:hover {
-            opacity: 0.9;
-        }
+    &:hover {
+      opacity: 0.9;
     }
+  }
 }
 
 .account-logo {
-    img {
-        border-radius: 50%;
+  img {
+    border-radius: 50%;
 
-        width: 30px;
-        height: 30px;
-    }
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .search {
-    position: relative;
+  position: relative;
 
-    input[type='text'] {
-        width: 100%;
-        min-width: 520px;
-        border: none;
-        background-color: #f5f6f8;
-        border-radius: 7px;
-        height: 35px;
-        padding-left: 40px;
-        padding-right: 15px;
-        font-size: 13px;
-    }
+  input[type='text'] {
+    width: 100%;
+    min-width: 520px;
+    border: none;
+    background-color: #f5f6f8;
+    border-radius: 7px;
+    height: 35px;
+    padding-left: 40px;
+    padding-right: 15px;
+    font-size: 13px;
+  }
 
-    .s-icon {
-        position: absolute;
-        left: 5px;
-        top: 5px;
-    }
+  .s-icon {
+    position: absolute;
+    left: 5px;
+    top: 5px;
+  }
 }
 
 // CONTENT
 .main-content {
-    position: relative;
-    background-color: #fff;
-    min-height: 95vh;
+  position: relative;
+  background-color: #fff;
+  min-height: 95vh;
 
-    padding: 20px 17px;
-    border-radius: 20px;
+  padding: 20px 17px;
+  border-radius: 20px;
 
-    border: 1px solid #e3e4e9;
+  border: 1px solid #e3e4e9;
 }
 
 .content-block-title,
 .search-filter-block,
 .buttons_grid,
 .filter-area {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content-block-title {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .content-title {
-    position: relative;
-    font-size: 34px;
-    font-weight: 700;
-    padding-left: 27px;
+  position: relative;
+  font-size: 34px;
+  font-weight: 700;
+  padding-left: 27px;
 
-    &:before {
-        content: '';
-        position: absolute;
-        left: 0;
-        width: 15px;
-        height: 100%;
-        background-color: #cabdff;
-        border-radius: 5px;
-    }
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 15px;
+    height: 100%;
+    background-color: #cabdff;
+    border-radius: 5px;
+  }
 }
 
 .filter-area,
 .buttons_grid {
-    gap: 15px;
+  gap: 15px;
 }
 
 .search-filter-block {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .filter-select,
 .list-btn,
 .grid-btn {
-    background-color: transparent;
-    outline: none;
-    border: none;
+  background-color: transparent;
+  outline: none;
+  border: none;
 }
 
 .filter-select,
 .buttons_grid {
-    background-color: #edeef1;
-    border-radius: 10px;
+  background-color: #edeef1;
+  border-radius: 10px;
 }
 
 .filter-select {
-    padding: 8px;
+  padding: 8px;
 }
 
 .buttons_grid {
-    padding: 5px;
+  padding: 5px;
 
-    button {
-        transition: all 0.2s linear;
-        border-radius: 5px;
+  button {
+    transition: all 0.2s linear;
+    border-radius: 5px;
 
-        svg {
-            transition: all 0.2s linear;
-            color: #9da2b4;
-        }
-
-        &.active-btn,
-        &:hover {
-            background-color: #fff;
-
-            svg {
-                color: #333;
-            }
-        }
+    svg {
+      transition: all 0.2s linear;
+      color: #9da2b4;
     }
+
+    &.active-btn,
+    &:hover {
+      background-color: #fff;
+
+      svg {
+        color: #333;
+      }
+    }
+  }
 }
 
 // SIDEBAR
 .sidebar-menu {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 
-    padding-top: 25px;
+  padding-top: 25px;
+  border-radius: 5px;
+
+  li {
+    display: flex;
+    align-items: center;
     border-radius: 5px;
 
-    li {
-        display: flex;
-        align-items: center;
-        border-radius: 5px;
+    a {
+      display: block;
+      padding: 5px 12px;
+      color: #333;
+      text-decoration: none;
+      font-weight: 500;
 
-        a {
-            display: block;
-            padding: 5px 12px;
-            color: #333;
-            text-decoration: none;
-            font-weight: 500;
-
-            span {
-                padding-right: 8px;
-            }
-        }
-
-        &.active,
-        &:hover {
-            background-color: #fff;
-            box-shadow: 0px 2px 4px 0px #d3caca;
-
-            a {
-                color: #014fff;
-                width: 100%;
-            }
-        }
+      span {
+        padding-right: 8px;
+      }
     }
+
+    &.active,
+    &:hover {
+      background-color: #fff;
+      box-shadow: 0px 2px 4px 0px #d3caca;
+
+      a {
+        color: #014fff;
+        width: 100%;
+      }
+    }
+  }
 }
 
 // GRID OF ITEMS
 .note-grid-item {
-    background-color: #b0e5fc;
+  background-color: #b0e5fc;
 }
 
 .masonry-grid-item {
-    background-color: #b0e5fc;
-    border-radius: 5px;
+  background-color: #b0e5fc;
+  border-radius: 5px;
 
-    &:hover {
-        .bottom-buttons {
-            opacity: 1;
-            visibility: visible;
-        }
+  &:hover {
+    .bottom-buttons {
+      opacity: 1;
+      visibility: visible;
     }
+  }
 }
 
 // MASONRY GRID
 .bottom-note {
-    padding: 15px;
-    margin-bottom: 50px;
+  padding: 15px;
+  margin-bottom: 50px;
 }
 
 .top-note {
-    img {
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-    }
+  img {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+  }
 }
 
 .bottom-buttons {
-    opacity: 0;
-    visibility: hidden;
+  opacity: 0;
+  visibility: hidden;
 
-    text-align: center;
-    margin-bottom: 20px;
-    transition: all 0.2s ease-in-out;
+  text-align: center;
+  margin-bottom: 20px;
+  transition: all 0.2s ease-in-out;
 
-    button {
-        background-color: transparent;
-        border: 0;
-        margin-right: 15px;
-        transition: all 0.1s linear;
+  button {
+    background-color: transparent;
+    border: 0;
+    margin-right: 15px;
+    transition: all 0.1s linear;
 
-        &:last-child {
-            margin-right: 0;
-        }
-
-        &:hover {
-            color: #9da2b4;
-        }
+    &:last-child {
+      margin-right: 0;
     }
+
+    &:hover {
+      color: #9da2b4;
+    }
+  }
 }
 
 .btn.add-task-button {
-    height: auto;
-    padding: 0 11px;
+  height: auto;
+  padding: 0 11px;
 }
 
 .add-task-input {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    input {
-        max-width: 150px;
-        margin-right: 5px;
-        border-radius: 5px;
-    }
+  input {
+    max-width: 150px;
+    margin-right: 5px;
+    border-radius: 5px;
+  }
 }
 
 // POPUP
 .add-note-popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-35%, -50%);
-    z-index: 12;
-    padding: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-35%, -50%);
+  z-index: 12;
+  padding: 20px;
 
-    border-radius: 10px;
-    height: 500px;
-    width: 550px;
-    background-color: #fff;
+  border-radius: 10px;
+  height: 500px;
+  width: 550px;
+  background-color: #fff;
 }
 
 .popup-bg {
-    position: absolute;
-    z-index: 10;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background-color: rgb(51 51 51 / 87%);
-    border-radius: 20px;
+  position: absolute;
+  z-index: 10;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgb(51 51 51 / 87%);
+  border-radius: 20px;
 }
 
 .popup-inner {
+  height: 100%;
+
+  form {
+    justify-content: space-between;
     height: 100%;
 
-    form {
-        justify-content: space-between;
-        height: 100%;
-
-        .title-note-input {
-            margin-bottom: 20px;
-        }
-
-        label {
-            margin-bottom: 10px;
-            font-size: 18px;
-            font-weight: 500;
-        }
-
-        input,
-        select {
-            background-color: #f5f6f8;
-            outline: none;
-            border: none;
-            height: 50px;
-            border-radius: 10px;
-            padding: 0 15px;
-        }
+    .title-note-input {
+      margin-bottom: 20px;
     }
 
-    form,
-    .form-inner {
-        display: flex;
-        flex-direction: column;
+    label {
+      margin-bottom: 10px;
+      font-size: 18px;
+      font-weight: 500;
     }
+
+    input,
+    select {
+      background-color: #f5f6f8;
+      outline: none;
+      border: none;
+      height: 50px;
+      border-radius: 10px;
+      padding: 0 15px;
+    }
+  }
+
+  form,
+  .form-inner {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+
+.task-item {
+  display: flex;
+  align-items: center;
+  margin-top: 8px;
+  padding: 6px 0;
+
+  input {
+    margin-right: 15px;
+  }
+
+  h5 {
+    flex-grow: 1;
+    font-size: 17px;
+    margin-bottom: 0;
+  }
+
+  .btn {
+    padding: 1px 8px;
+    height: auto;
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  &:hover {
+    .btn {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
 }
