--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -395,6 +395,9 @@ body .btn {
 }
 
 .is-checked {
-    opacity: 0.5;
-    text-decoration: line-through;
+    h5,
+    input {
+        opacity: 0.5;
+        text-decoration: line-through;
+    }
 }
