added active tab in sidebar.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -222,7 +222,7 @@ body .btn {
     &.active,
     &:hover {
       background-color: #fff;
-      box-shadow: 0px 2px 4px 0px #d3caca;
+      box-shadow: 0 2px 4px 0 #d3caca;
 
       a {
         color: #014fff;
