--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -203,6 +203,7 @@ body .btn {
     border-radius: 5px;
 
     li {
+      position: relative;
         display: flex;
         align-items: center;
         border-radius: 5px;
@@ -229,6 +230,21 @@ body .btn {
                 width: 100%;
             }
         }
+
+      .r-counter {
+        position: absolute;
+        right: 12px;
+        font-size: 11px;
+        background-color: #5a8bf6;
+        color: #fff;
+        padding: 3px;
+        border-radius: 50%;
+        width: 19px;
+        height: 19px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     }
 }
 
@@ -458,4 +474,8 @@ body .btn {
 .r-title,
 .r-date {
     font-weight: 600;
+}
+
+.active-reminder {
+  color: #5a8cf6;
 }
