--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -479,3 +479,10 @@ body .btn {
 .active-reminder {
   color: #5a8cf6;
 }
+
+.r-empty-message {
+  font-weight: 600;
+  text-align: center;
+  margin-top: 10%;
+  font-size: 26px;
+}
